# Embers

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/actions/install-flatc/: action.yml
.github/workflows/: ci.yml  release.yml
crates/embers-cli/: Cargo.toml
crates/embers-cli/src/: automation.rs  interactive.rs  lib.rs  main.rs
crates/embers-cli/tests/: automation.rs  integration.rs  interactive.rs  panes.rs  ping.rs  popups.rs  sessions.rs  windows.rs
crates/embers-cli/tests/support/: mod.rs
crates/embers-client/: Cargo.toml
crates/embers-client/benches/: search_yank.rs
crates/embers-client/src/: client.rs  configured_client.rs  controller.rs  grid.rs  lib.rs  presentation.rs  renderer.rs  socket_transport.rs  state.rs  testing.rs  transport.rs
crates/embers-client/src/config/: discover.rs  error.rs  loader.rs  mod.rs
crates/embers-client/src/input/: keymap.rs  keyparse.rs  mod.rs  modes.rs
crates/embers-client/src/scripting/: context.rs  documentation.rs  engine.rs  error.rs  harness.rs  mod.rs  model.rs  runtime.rs  types.rs
crates/embers-client/tests/: config_api_docs.rs  config_loading.rs  configured_client.rs  context.rs  controller.rs  e2e.rs  integration.rs  presentation.rs  reducer.rs  renderer.rs  repo_config.rs  script_actions.rs  script_engine.rs  socket_transport.rs
crates/embers-client/tests/fixtures/: repository_config.rhai
crates/embers-client/tests/support/: mod.rs
crates/embers-core/: Cargo.toml
crates/embers-core/src/: diagnostics.rs  geometry.rs  lib.rs  metadata.rs  snapshot.rs
crates/embers-protocol/: Cargo.toml  build.rs
crates/embers-protocol/schema/: embers.fbs
crates/embers-protocol/src/: client.rs  codec.rs  framing.rs  lib.rs  types.rs
crates/embers-protocol/tests/: family_round_trip.rs  integration.rs  ping_round_trip.rs
crates/embers-server/: Cargo.toml
crates/embers-server/src/: buffer_runtime.rs  config.rs  lib.rs  model.rs  persist.rs  protocol.rs  server.rs  state.rs  terminal_backend.rs
crates/embers-server/tests/: buffer_lifecycle.rs  buffer_move.rs  client_sessions.rs  floating_windows.rs  integration.rs  model_state.rs  nested_tabs.rs  persistence.rs  ping_server.rs  session_root_tabs.rs  split_layout.rs
crates/embers-test-support/: Cargo.toml
crates/embers-test-support/src/: cli.rs  lib.rs  protocol.rs  pty.rs  server.rs  test_lock.rs
crates/embers-test-support/tests/: buffer_runtime.rs  detach_move.rs  floating_windows.rs  integration.rs  nested_tabs.rs  protocol_server.rs  pty_smoke.rs  server_harness.rs  session_root_tabs.rs  split_layout.rs  support.rs
crates/mux-cli/: Cargo.toml
crates/mux-cli/src/: lib.rs  main.rs
crates/mux-cli/tests/: panes.rs  ping.rs  popups.rs  sessions.rs  windows.rs
crates/mux-cli/tests/support/: mod.rs
crates/mux-client/: Cargo.toml
crates/mux-client/src/: client.rs  controller.rs  grid.rs  lib.rs  presentation.rs  renderer.rs  socket_transport.rs  state.rs  testing.rs  transport.rs
crates/mux-client/tests/: controller.rs  e2e.rs  presentation.rs  reducer.rs  renderer.rs  socket_transport.rs
crates/mux-client/tests/support/: mod.rs
crates/mux-core/: Cargo.toml
crates/mux-core/src/: error.rs  geometry.rs  ids.rs  metadata.rs
crates/mux-protocol/: Cargo.toml  build.rs
crates/mux-protocol/schema/: embers.fbs
crates/mux-protocol/src/: client.rs  codec.rs  framing.rs  lib.rs  types.rs
crates/mux-protocol/tests/: family_round_trip.rs  ping_round_trip.rs
crates/mux-server/: Cargo.toml
crates/mux-server/src/: buffer_runtime.rs  config.rs  lib.rs  model.rs  protocol.rs  server.rs  state.rs  terminal_backend.rs
crates/mux-server/tests/: buffer_lifecycle.rs  buffer_move.rs  floating_windows.rs  model_state.rs  nested_tabs.rs  ping_server.rs  session_root_tabs.rs  split_layout.rs
crates/mux-test-support/: Cargo.toml
crates/mux-test-support/src/: cli.rs  lib.rs  protocol.rs  pty.rs  server.rs
crates/mux-test-support/tests/: buffer_runtime.rs  detach_move.rs  floating_windows.rs  nested_tabs.rs  protocol_server.rs  pty_smoke.rs  server_harness.rs  session_root_tabs.rs  split_layout.rs
docs/: activity-bell-policy.md  configuration.md  input-routing-policy.md  input-routing.md  render-source-contract.md  terminal-backend-boundary.md  terminal-capture-model.md  terminal-runtime.md  terminal-test-matrix.md
docs/config-api/: SUMMARY.md  action.md  book.toml  buffer-ref.md  context.md  event-info.md  example.md  floating-ref.md  index.md  mouse.md  mux.md  node-ref.md  registration-action.md  registration-globals.md  registration-system.md  registration-tree.md  registration-ui.md  runtime-theme.md  session-ref.md  system-runtime.md  tab-bar-context.md  tab-info.md  tabbar.md  theme.md  tree.md  ui.md
docs/config-api-book/: 404.html  action.html  book-a0b12cfe.js  buffer-ref.html  context.html  event-info.html  example.html  floating-ref.html  index.html  mouse.html  mux.html  node-ref.html  print.html  registration-action.html  registration-globals.html  registration-system.html  registration-tree.html  registration-ui.html  runtime-theme.html  searcher-c2a407aa.js  searchindex-0ec70bca.js  searchindex-256e957a.js  searchindex-329edd6d.js  searchindex-60b5c002.js  searchindex-6f9ff0e9.js  searchindex-72423136.js  searchindex-bd58f06f.js  session-ref.html  system-runtime.html  tab-bar-context.html  tab-info.html  tabbar.html  theme.html  toc-c8603eba.js  toc.html  tree.html  ui.html
docs/config-api-book/defs/: registration.rhai  runtime.rhai
docs/config-api/defs/: registration.rhai  runtime.rhai
docs/config-api/theme/: rhai-autodocs-tabs.js  rhai-highlight.js
