[workspace]
members = [
  "crates/mux-core",
  "crates/mux-protocol",
  "crates/mux-server",
  "crates/mux-client",
  "crates/mux-cli",
  "crates/mux-test-support",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
assert_cmd = "2"
clap = { version = "4.5", features = ["derive"] }
flatbuffers = "24.3.25"
portable-pty = "0.9"
predicates = "3"
proptest = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
