[package]
name = "embers-cli"
autobins = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# `embers` is the main interactive entry point; `embers-cli` is the lightweight
# command-focused binary kept for explicit CLI/tooling workflows.
[[bin]]
name = "embers"
path = "src/main.rs"

[[bin]]
name = "embers-cli"
path = "src/bin/embers-cli.rs"

[dependencies]
clap.workspace = true
embers-client = { path = "../embers-client" }
embers-core = { path = "../embers-core" }
embers-protocol = { path = "../embers-protocol" }
embers-server = { path = "../embers-server" }
libc.workspace = true
tokio.workspace = true
tracing.workspace = true
unicode-width.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
embers-test-support = { path = "../embers-test-support" }
predicates.workspace = true
tempfile.workspace = true
