[package]
name = "embers-cli"
autobins = false
autotests = false
description = "Interactive terminal UI and automation CLI for the Embers terminal multiplexer."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# `embers` is the main interactive entry point; `embers-cli` is the lightweight
# command-focused binary kept for explicit CLI/tooling workflows.
[[bin]]
name = "embers"
path = "src/main.rs"

[[bin]]
name = "embers-cli"
path = "src/bin/embers-cli.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[dependencies]
base64.workspace = true
clap.workspace = true
embers-client.workspace = true
embers-core.workspace = true
embers-protocol.workspace = true
embers-server.workspace = true
libc.workspace = true
shell-words.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
unicode-width.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
embers-test-support.workspace = true
filetime = "0.2"
predicates.workspace = true
tempfile.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
