[package]
name = "embers-client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
embers-core = { path = "../embers-core" }
embers-protocol = { path = "../embers-protocol" }
tokio.workspace = true

[dev-dependencies]
embers-test-support = { path = "../embers-test-support" }
tokio.workspace = true
