[package]
name = "embers-client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
directories.workspace = true
embers-core = { path = "../embers-core" }
embers-protocol = { path = "../embers-protocol" }
rhai.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
embers-test-support = { path = "../embers-test-support" }
tempfile.workspace = true
tokio.workspace = true
