[package]
name = "embers-client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
directories.workspace = true
embers-core = { path = "../embers-core" }
embers-protocol = { path = "../embers-protocol" }
rhai.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
embers-test-support = { path = "../embers-test-support" }
tempfile.workspace = true
tokio.workspace = true
