[package]
name = "embers-protocol"
build = "build.rs"
autotests = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
flatbuffers.workspace = true
embers-core = { path = "../embers-core" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
