[package]
name = "embers-protocol"
build = "build.rs"
autotests = false
description = "FlatBuffers protocol, framing, and client transport primitives for Embers."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
flatbuffers.workspace = true
embers-core.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
