[package]
name = "embers-server"
autotests = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alacritty_terminal = "0.25.1"
embers-core = { path = "../embers-core" }
embers-protocol = { path = "../embers-protocol" }
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
