[package]
name = "embers-server"
autotests = false
description = "Headless session, layout, persistence, and PTY runtime server for Embers."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
alacritty_terminal = "0.25.1"
base64.workspace = true
embers-core = { version = "0.1.0", path = "../embers-core" }
embers-protocol = { version = "0.1.0", path = "../embers-protocol" }
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
