[package]
name = "embers-test-support"
autotests = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
assert_cmd.workspace = true
embers-core = { path = "../embers-core" }
embers-protocol = { path = "../embers-protocol" }
embers-server = { path = "../embers-server" }
libc.workspace = true
portable-pty.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
