[package]
name = "embers-test-support"
autotests = false
description = "Shared integration-test harnesses and helpers for Embers crates."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
assert_cmd.workspace = true
embers-core = { version = "0.1.0", path = "../embers-core" }
embers-protocol = { version = "0.1.0", path = "../embers-protocol" }
embers-server = { version = "0.1.0", path = "../embers-server" }
fastrand.workspace = true
libc.workspace = true
portable-pty.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
