[package]
name = "embers-test-support"
autotests = false
description = "Shared integration-test harnesses and helpers for Embers crates."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
assert_cmd.workspace = true
embers-core.workspace = true
embers-protocol.workspace = true
embers-server.workspace = true
fastrand.workspace = true
libc.workspace = true
portable-pty.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
