[package]
name = "mux-client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
mux-core = { path = "../mux-core" }
mux-protocol = { path = "../mux-protocol" }
tokio.workspace = true

[dev-dependencies]
mux-test-support = { path = "../mux-test-support" }
tokio.workspace = true
