[package]
name = "mux-protocol"
build = "build.rs"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
flatbuffers.workspace = true
mux-core = { path = "../mux-core" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
