[package]
name = "mux-server"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
mux-core = { path = "../mux-core" }
mux-protocol = { path = "../mux-protocol" }
portable-pty.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
