[package]
name = "mux-test-support"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
assert_cmd.workspace = true
mux-core = { path = "../mux-core" }
mux-protocol = { path = "../mux-protocol" }
mux-server = { path = "../mux-server" }
portable-pty.workspace = true
tempfile.workspace = true
tokio.workspace = true
